add test acrtion (mock api)

--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -4,6 +4,7 @@ header{
     margin: 0 auto;
     padding: 0 10px;
     height: 100px;
+    background: #E7CFCD;
     .wrapper{
         position: relative;
         display: block;
